objects/FISDSSConfig__mdt.object
<CustomObject>
    <description>Metadata for all the configs related to FISDSSConfig</description>
    <fields>
        <fullName>AcquirerId__c</fullName>
        <description>Acquirer Id</description>
        <label>AcquirerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AqrCustomerId__c</fullName>
        <description>Aqr Customer Id</description>
        <label>AqrCustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aqr__c</fullName>
        <description>Aqr</description>
        <label>Aqr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChexSystemsVersionNbr__c</fullName>
        <description>Chex Systems Version Nbr</description>
        <label>ChexSystemsVersionNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigKey__c</fullName>
        <description>Config Key</description>
        <label>ConfigKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>Customer Id</description>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeChexSystems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Chex Systems</description>
        <label>IncludeChexSystems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeIdentityManager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Identity Manager</description>
        <label>IncludeIdentityManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeOfac__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Ofac</description>
        <label>IncludeOfac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeQualifile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Qualifile</description>
        <label>IncludeQualifile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndustryMarketCode__c</fullName>
        <description>Industry Market Code</description>
        <label>IndustryMarketCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryId__c</fullName>
        <description>Inquiry Id</description>
        <label>InquiryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceCd__c</fullName>
        <description>Instance Cd</description>
        <label>InstanceCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsStaging__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Staging</description>
        <label>IsStaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <description>Location Id</description>
        <label>LocationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MsgUuid__c</fullName>
        <description>Msg Uuid</description>
        <label>MsgUuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCd__c</fullName>
        <description>Product Cd</description>
        <label>ProductCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductVersion__c</fullName>
        <description>Product Version</description>
        <label>ProductVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualifileVersionNbr__c</fullName>
        <description>Qualifile Version Nbr</description>
        <label>QualifileVersionNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportDataType__c</fullName>
        <description>Report Data Type</description>
        <label>ReportDataType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrategyTypeId__c</fullName>
        <description>Strategy Type Id</description>
        <label>StrategyTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserDefinedTransTextOne__c</fullName>
        <description>UserDefined Trans Text One</description>
        <label>UserDefinedTransTextOne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserDefinedTransTextThree__c</fullName>
        <description>User Defined Trans Text Three</description>
        <label>UserDefinedTransTextThree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserDefinedTransTextTwo__c</fullName>
        <description>User Defined Trans Text Two</description>
        <label>UserDefinedTransTextTwo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserDefinedTransactionText__c</fullName>
        <description>UserDefined Trans Text</description>
        <label>UserDefinedTransText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FISDSSConfig</label>
    <pluralLabel>FISDSSConfig</pluralLabel>
</CustomObject>